// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AboutMe /> renders properly 1`] = `
.c0 {
  max-width: 960px;
  margin: 0 auto;
  padding: 0 20px;
}

.c1 {
  font-size: 24px;
  line-height: 1.4;
}

<body>
  <div>
    <section
      class="c0"
    >
      <main>
        <p
          class="c1"
        >
          You can hear more about here:
        </p>
      </main>
    </section>
  </div>
</body>
`;

exports[`<AboutMe /> renders the navigation properly 1`] = `
.c0 {
  max-width: 960px;
  margin: 0 auto;
  padding: 0 20px;
}

.c1 {
  font-size: 24px;
  line-height: 1.4;
}

.c2 {
  margin: 0;
  padding: 0;
}

.c3 {
  list-style: none;
  font-size: 24px;
  font-weight: 700;
  margin: 0 24px 5px 0;
}

.c4 {
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  text-transform: uppercase;
}

.c4:after {
  content: '.';
  display: block;
  font-size: 38px;
  line-height: 0.5;
}

@media (min-width:760px) {
  .c2 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media (min-width:760px) {
  .c3 {
    font-size: 22px;
    margin: 0 24px 0 0;
  }
}

@media (min-width:760px) {
  .c4:after {
    line-height: 0.4;
  }
}

<body>
  <div>
    <section
      class="c0"
    >
      <main>
        <p
          class="c1"
        >
          You can hear more about here:
        </p>
        <ul
          class="c2"
          data-testid="about-me-navigation-list"
        >
          <li
            class="c3"
            data-testid="about-me-navigation-item"
          >
            <a
              class="c4"
              href=""
            />
          </li>
          <li
            class="c3"
            data-testid="about-me-navigation-item"
          >
            <a
              class="c4"
              href=""
            />
          </li>
        </ul>
      </main>
    </section>
  </div>
</body>
`;
